# ekstertera

./: .gitignore  CMakeLists.txt  clang-format.sh
3dparty/json/: json.cpp  json.h
3dparty/qt5/mimetypes/: qmime_global.h  qmimedatabase.cpp  qmimedatabase.h  qmimedatabase_p.h  qmimeglobpattern.cpp  qmimeglobpattern_p.h  qmimemagicrule.cpp  qmimemagicrule_p.h  qmimemagicrulematcher.cpp  qmimemagicrulematcher_p.h  qmimeprovider.cpp  qmimeprovider_p.h  qmimetype.cpp  qmimetype.h  qmimetype_p.h  qmimetypeparser.cpp  qmimetypeparser_p.h
3dparty/qt5/standardpaths/: qstandardpaths.cpp  qstandardpaths.h  qstandardpaths_mac.cpp  qstandardpaths_unix.cpp  qstandardpaths_win.cpp
src/: main.cpp  resource.qrc  sysheaders.h
src/forms/: form_info.cpp  form_info.h  form_info_ui.cpp  form_info_ui.h  form_main.cpp  form_main.h  form_main_ui.cpp  form_main_ui.h  form_settings.cpp  form_settings.h  form_settings_ui.cpp  form_settings_ui.h
src/utils/: api.cpp  api.h  clipboard.cpp  clipboard.h  icon.cpp  icon.h  settings.cpp  settings.h  translator.cpp  translator.h
src/widgets/: widget_disk.cpp  widget_disk.h  widget_disk_item.cpp  widget_disk_item.h  widget_disk_item_delegate.cpp  widget_disk_item_delegate.h  widget_disk_path.cpp  widget_disk_path.h  widget_progress.cpp  widget_progress.h  widget_tasks.cpp  widget_tasks.h  widget_tasks_item.cpp  widget_tasks_item.h  widget_tray_icon.cpp  widget_tray_icon.h
